--- a/css/main.css
+++ b/css/main.css
@@ -4755,8 +4755,9 @@ label {
     font-size: 18px;
     margin-bottom: 30px; }
   .login_form_inner .login_form {
-    max-width: 385px;
-    margin: auto; }
+    max-width: 80%;
+    margin: auto; 
+  }
   .login_form_inner.reg_form {
     padding-top: 60px; }
     .login_form_inner.reg_form h3 {
@@ -4766,7 +4767,7 @@ label {
   height: 54px;
   border: none;
   border-bottom: 1px solid #cccccc;
-  border-radius: 0px;
+  border-radius: 10px;
   outline: none;
   box-shadow: none; }
 .login_form .form-group .creat_account {
@@ -4790,7 +4791,8 @@ label {
   color: #777777;
   font-family: "Roboto", sans-serif;
   margin-top: 20px;
-  display: block; }
+  display: block; 
+}
 
 /* End Login form Area css
 ============================================================================================ */
