--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -2129,27 +2129,27 @@ textarea.form-control {
     border-radius: .25rem
 }
 
-.custom-select.is-valid,
+.Zel-Desactivado.is-valid,
 .form-control.is-valid,
-.was-validated .custom-select:valid,
+.was-validated .Zel-Desactivado:valid,
 .was-validated .form-control:valid {
     border-color: #28a745
 }
 
-.custom-select.is-valid:focus,
+.Zel-Desactivado.is-valid:focus,
 .form-control.is-valid:focus,
-.was-validated .custom-select:valid:focus,
+.was-validated .Zel-Desactivado:valid:focus,
 .was-validated .form-control:valid:focus {
     border-color: #28a745;
     box-shadow: 0 0 0 .2rem rgba(40, 167, 69, .25)
 }
 
-.custom-select.is-valid~.valid-feedback,
-.custom-select.is-valid~.valid-tooltip,
+.Zel-Desactivado.is-valid~.valid-feedback,
+.Zel-Desactivado.is-valid~.valid-tooltip,
 .form-control.is-valid~.valid-feedback,
 .form-control.is-valid~.valid-tooltip,
-.was-validated .custom-select:valid~.valid-feedback,
-.was-validated .custom-select:valid~.valid-tooltip,
+.was-validated .Zel-Desactivado:valid~.valid-feedback,
+.was-validated .Zel-Desactivado:valid~.valid-tooltip,
 .was-validated .form-control:valid~.valid-feedback,
 .was-validated .form-control:valid~.valid-tooltip {
     display: block
@@ -2246,27 +2246,27 @@ textarea.form-control {
     border-radius: .25rem
 }
 
-.custom-select.is-invalid,
+.Zel-Desactivado.is-invalid,
 .form-control.is-invalid,
-.was-validated .custom-select:invalid,
+.was-validated .Zel-Desactivado:invalid,
 .was-validated .form-control:invalid {
     border-color: #dc3545
 }
 
-.custom-select.is-invalid:focus,
+.Zel-Desactivado.is-invalid:focus,
 .form-control.is-invalid:focus,
-.was-validated .custom-select:invalid:focus,
+.was-validated .Zel-Desactivado:invalid:focus,
 .was-validated .form-control:invalid:focus {
     border-color: #dc3545;
     box-shadow: 0 0 0 .2rem rgba(220, 53, 69, .25)
 }
 
-.custom-select.is-invalid~.invalid-feedback,
-.custom-select.is-invalid~.invalid-tooltip,
+.Zel-Desactivado.is-invalid~.invalid-feedback,
+.Zel-Desactivado.is-invalid~.invalid-tooltip,
 .form-control.is-invalid~.invalid-feedback,
 .form-control.is-invalid~.invalid-tooltip,
-.was-validated .custom-select:invalid~.invalid-feedback,
-.was-validated .custom-select:invalid~.invalid-tooltip,
+.was-validated .Zel-Desactivado:invalid~.invalid-feedback,
+.was-validated .Zel-Desactivado:invalid~.invalid-tooltip,
 .was-validated .form-control:invalid~.invalid-feedback,
 .was-validated .form-control:invalid~.invalid-tooltip {
     display: block
@@ -2382,7 +2382,7 @@ textarea.form-control {
     .form-inline .form-control-plaintext {
         display: inline-block
     }
-    .form-inline .custom-select,
+    .form-inline .Zel-Desactivado,
     .form-inline .input-group {
         width: auto
     }
@@ -3524,7 +3524,7 @@ input[type=submit].btn-block {
 }
 
 .input-group>.custom-file,
-.input-group>.custom-select,
+.input-group>.Zel-Desactivado,
 .input-group>.form-control {
     position: relative;
     -ms-flex: 1 1 auto;
@@ -3534,19 +3534,19 @@ input[type=submit].btn-block {
 }
 
 .input-group>.custom-file+.custom-file,
-.input-group>.custom-file+.custom-select,
+.input-group>.custom-file+.Zel-Desactivado,
 .input-group>.custom-file+.form-control,
-.input-group>.custom-select+.custom-file,
-.input-group>.custom-select+.custom-select,
-.input-group>.custom-select+.form-control,
+.input-group>.Zel-Desactivado+.custom-file,
+.input-group>.Zel-Desactivado+.Zel-Desactivado,
+.input-group>.Zel-Desactivado+.form-control,
 .input-group>.form-control+.custom-file,
-.input-group>.form-control+.custom-select,
+.input-group>.form-control+.Zel-Desactivado,
 .input-group>.form-control+.form-control {
     margin-left: -1px
 }
 
 .input-group>.custom-file .custom-file-input:focus~.custom-file-label,
-.input-group>.custom-select:focus,
+.input-group>.Zel-Desactivado:focus,
 .input-group>.form-control:focus {
     z-index: 3
 }
@@ -3555,13 +3555,13 @@ input[type=submit].btn-block {
     z-index: 4
 }
 
-.input-group>.custom-select:not(:last-child),
+.input-group>.Zel-Desactivado:not(:last-child),
 .input-group>.form-control:not(:last-child) {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0
 }
 
-.input-group>.custom-select:not(:first-child),
+.input-group>.Zel-Desactivado:not(:first-child),
 .input-group>.form-control:not(:first-child) {
     border-top-left-radius: 0;
     border-bottom-left-radius: 0
@@ -3802,7 +3802,7 @@ input[type=submit].btn-block {
     background-color: rgba(0, 123, 255, .5)
 }
 
-.custom-select {
+.Zel-Desactivado {
     display: inline-block;
     width: 100%;
     height: calc(2.25rem + 2px);
@@ -3819,41 +3819,41 @@ input[type=submit].btn-block {
     appearance: none
 }
 
-.custom-select:focus {
+.Zel-Desactivado:focus {
     border-color: #80bdff;
     outline: 0;
     box-shadow: 0 0 0 .2rem rgba(128, 189, 255, .5)
 }
 
-.custom-select:focus::-ms-value {
+.Zel-Desactivado:focus::-ms-value {
     color: #495057;
     background-color: #fff
 }
 
-.custom-select[multiple],
-.custom-select[size]:not([size="1"]) {
+.Zel-Desactivado[multiple],
+.Zel-Desactivado[size]:not([size="1"]) {
     height: auto;
     padding-right: .75rem;
     background-image: none
 }
 
-.custom-select:disabled {
+.Zel-Desactivado:disabled {
     color: #6c757d;
     background-color: #e9ecef
 }
 
-.custom-select::-ms-expand {
+.Zel-Desactivado::-ms-expand {
     opacity: 0
 }
 
-.custom-select-sm {
+.Zel-Desactivado-sm {
     height: calc(1.8125rem + 2px);
     padding-top: .375rem;
     padding-bottom: .375rem;
     font-size: 75%
 }
 
-.custom-select-lg {
+.Zel-Desactivado-lg {
     height: calc(2.875rem + 2px);
     padding-top: .375rem;
     padding-bottom: .375rem;
@@ -4064,14 +4064,14 @@ input[type=submit].btn-block {
 
 .custom-control-label::before,
 .custom-file-label,
-.custom-select {
+.Zel-Desactivado {
     transition: background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out
 }
 
 @media screen and (prefers-reduced-motion:reduce) {
     .custom-control-label::before,
     .custom-file-label,
-    .custom-select {
+    .Zel-Desactivado {
         transition: none
     }
 }
