--- a/index/file/css/main.css
+++ b/index/file/css/main.css
@@ -7,6 +7,9 @@
 /* Wide Mobile Layout: 480px */
 /* Section Gaps css
 ============================================================================================ */
+body{
+  
+}
 .no-padding {
   padding: 0; }
 
